--- a/6. Arrays.md
+++ b/6. Arrays.md
@@ -825,3 +825,92 @@ console.log(result); // { яблоко: 2, банан: 3, апельсин: 1 }
 
 ---
 
+# Сортировка массива
+
+## Сортировка без функции обратного вызова
+
+Метод ``sort`` принимает на вход колбэк. Но для других методов колбэк обязателен, а для ``sort`` нет:
+
+```js
+const myNumbers = [0, 3.14, 2.718, 13];
+myNumbers.sort();
+myNumbers; // [0, 13, 2.718, 3.14]
+```
+
+Элементы поменялись местами, но их порядок не поддаётся логике: они не выстроены ни по возрастанию, ни по убыванию.
+
+Но логика тут всё-таки есть. Метод ``sort`` работал с элементами массива как со строками. Будь это слова, они бы выстроились по алфавиту:
+
+```js
+const fruits = ['яблоко', 'банан', 'апельсин', 'томат'];
+fruits.sort(); // ["апельсин", "банан", "томат", "яблоко"] 
+```
+
+## Функции обратного вызова для сортировки
+
+На практике метод ``sort`` редко вызывают без аргументов. По двум причинам:
+
+* нам не всегда нужна сортировка по возрастанию,
+* нам точно не нужно сортировать числа как строки.
+
+Поэтому ``sort`` принимает на вход колбэк, в котором описана логика сортировки элементов.
+
+Любой алгоритм сортировки — последовательное сравнение двух элементов. Один из них будет стоять в итоговом массиве раньше, другой — позже. Логику, по которой элементы будут сравниваться, описывают внутри колбэка метода ``sort``.
+
+Колбэк принимает на вход два аргумента — два элемента массива, которые предстоит сравнивать. Способ сравнения нужно описать в колбэке. Метод ``sort`` расставляет элементы исходя из значения, которое возвращает колбэк.
+
+Есть ограничение: колбэк обязан возвращать число. Оно может быть:
+
+1. Меньше нуля — первый элемент, переданный как аргумент колбэка, встанет в массиве раньше второго.
+2. Больше нуля — наоборот, второй элемент окажется раньше первого.
+3. Равно нулю — порядок не изменится, элементы будут стоять как в исходном массиве.
+
+Вернёмся к массиву с числами и отсортируем его по возрастанию:
+
+```js
+const myNumbers = [0, 3.14, 2.718, 13];
+
+myNumbers.sort(function (a, b) {
+    return a - b;
+
+  /* Если a меньше b, вернётся отрицательное число.
+  Это значит, что a должно расположиться в итоговом массиве
+  раньше, b — позже. Например:
+
+    a = 0, b = 3.14
+    a - b = -3.14
+
+  Получили отрицательное число, значит a стоит раньше b */
+});
+
+console.log(myNumbers); // [0, 2.718, 3.14, 13] — так и есть
+```
+
+Если же элементы массива — строки, трюк не пройдёт: вычитание одной строки из другой вернёт ``NaN``. Придётся указывать, какая строка считается «большей», а какая — «меньшей», и прописывать для разных случаев возвращаемое значение:
+
+```js
+/* Диагнозы записаны в том порядке,
+в каком поступили пациенты. Отсортируем его по алфавиту. */
+
+const diagnoses = [
+  'мизофобия',
+  'синдром упущенной выгоды',
+  'боязнь красного цвета'
+];
+
+diagnoses.sort(function(a, b) {
+  /* приведём строки к нижнему регистру,
+  чтобы сравнение прошло корректно */
+  a = a.toLowerCase();
+  b = b.toLowerCase();
+
+    if (a < b) return -1; // a расположится раньше b
+    if (b < a) return 1; // b расположится раньше a
+
+  return 0;
+});
+
+console.log(diagnoses);
+
+/* ["боязнь красного цвета", "мизофобия", "синдром упущенной выгоды"] */
+```
